--- a/ChatBot/index.html
+++ b/ChatBot/index.html
@@ -3,16 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Chatbot</title>
+    <title>Modern Chatbot</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="chat-container">
+
+        <!-- Header -->
+        <header class="chat-header">
+            <h2>Chatbot Assistant</h2>
+        </header>
+
+        <!-- Chat Messages -->
         <div id="chat-box" class="chat-box"></div>
+
+        <!-- Input Form -->
         <form id="chat-form" class="chat-form">
-            <input type="text" id="user-input" placeholder="Type your message..." required autocomplete="off">
+            <input type="text" id="user-input" placeholder="Type a message..." required autocomplete="off">
             <button type="submit">Send</button>
         </form>
+
+        <!-- Footer -->
+        <footer class="chat-footer">
+            <p>&copy; 2025 Chatbot Inc. All rights reserved.</p>
+        </footer>
+
     </div>
 
     <script src="script.js"></script>
