--- a/ChatBot/index.html
+++ b/ChatBot/index.html
@@ -27,7 +27,7 @@
 
         <!-- Footer -->
         <footer class="chat-footer">
-            <p>&copy; 2025 Chatbot Inc. All rights reserved.</p>
+            <p>&copy; Upendra Chatbot </p>
         </footer>
 
     </div>
